--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="img/CHO.png" type="image/x-icon">
+    <link rel="shortcut icon" href="CHO.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="/css/all.min.css">
 
@@ -18,9 +18,9 @@
     <section>
         <div class="py-3 d-flex justify-content-center">
             <div>
-                <a href="index.html"><img src="img/urd.png" alt="" height="95"></a>
-                <a href="index.html"><img src="img/CHO.png" alt="" height="95"></a>
-                <a href="index.html"><img src="img/doh.png" alt="" height="90"></a>
+                <a href="index.html"><img src="urd.png" alt="" height="95"></a>
+                <a href="index.html"><img src="CHO.png" alt="" height="95"></a>
+                <a href="index.html"><img src="doh.png" alt="" height="90"></a>
             </div>
     </section>
 
